Fix vertical alignment of language icon

--- a/muchopper/web/scss/app.scss
+++ b/muchopper/web/scss/app.scss
@@ -645,6 +645,10 @@ svg.icon-users {
     vertical-align: -0.18em;
 }
 
+svg.icon-lang1 {
+    vertical-align: -0.16em;
+}
+
 /* feature support matrix */
 
 table.features {
